--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^12.0.3",
     "express": "^4.17.2",
     "http": "^0.0.1-security",
     "mongoose": "^6.1.6",
