--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "test": "jest --verbose",
+    "dev": "nodemon index.js",
+    "lint": "eslint ."
   },
   "author": "Matti Aalto",
   "license": "ISC",
@@ -17,5 +18,13 @@
     "http": "^0.0.1-security",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-plugin-react": "^7.28.0",
+    "jest": "^27.4.7"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
