--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "jest --verbose",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint ."
   },
   "author": "Matti Aalto",
@@ -15,14 +15,17 @@
     "cors": "^2.8.5",
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "http": "^0.0.1-security",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
     "eslint-plugin-react": "^7.28.0",
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "supertest": "^6.2.3"
   },
   "jest": {
     "testEnvironment": "node"
